<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/dt_avatar"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/user_ava"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.498"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="0.026"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/dt_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_toEndOf="@id/dt_avatar"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/dt_avatar"
                card_view:layout_constraintVertical_bias="0.050000012"
                tools:text="@string/user_name" />

            <TextView
                android:id="@+id/tv_repository"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/dt_username"
                card_view:layout_constraintVertical_bias="0.028"
                tools:text="@string/tvrepository" />

            <TextView
                android:id="@+id/dt_repository"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="120dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/tv_repository"
                card_view:layout_constraintTop_toBottomOf="@+id/dt_username"
                card_view:layout_constraintVertical_bias="0.028"
                tools:text="@string/repository" />


            <TextView
                android:id="@+id/dt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:textAlignment="center"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="1.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_repository"
                card_view:layout_constraintVertical_bias="0.03"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/dt_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:textAlignment="center"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/dt_name"
                card_view:layout_constraintVertical_bias="0.028"
                tools:text="@string/company" />

            <TextView
                android:id="@+id/dt_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:textAlignment="center"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/dt_company"
                card_view:layout_constraintVertical_bias="0.028"
                tools:text="@string/location" />

            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/dt_location"
                card_view:layout_constraintVertical_bias="0.028"
                tools:text="@string/tvfollowers" />

            <TextView
                android:id="@+id/tv_following"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="68dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/dt_location"
                card_view:layout_constraintVertical_bias="0.028"
                tools:text="@string/tvfollowing" />

            <TextView
                android:id="@+id/dt_followers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"

                android:ellipsize="end"
                android:maxLines="5"
                card_view:layout_constraintBottom_toBottomOf="@+id/tv_followers"
                card_view:layout_constraintEnd_toStartOf="@+id/tv_followers"
                card_view:layout_constraintTop_toTopOf="@+id/tv_followers"
                tools:text="@string/followers" />

            <TextView
                android:id="@+id/dt_following"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"

                android:maxLines="5"
                card_view:layout_constraintBottom_toBottomOf="@+id/tv_following"
                card_view:layout_constraintEnd_toStartOf="@+id/tv_following"
                card_view:layout_constraintTop_toTopOf="@+id/tv_following"
                tools:text="@string/following" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/colorPrimary"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/dt_following"
                card_view:tabTextColor="@android:color/white" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="312dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tabs" />

            <ToggleButton
                android:id="@+id/btn_fav"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/favourite_toggle"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textOff=""
                android:textOn=""
                card_view:layout_constraintBottom_toBottomOf="@+id/dt_username"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="@+id/dt_username" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                card_view:layout_constraintBottom_toBottomOf="@+id/dt_avatar"
                card_view:layout_constraintEnd_toEndOf="@+id/dt_avatar"
                card_view:layout_constraintStart_toStartOf="@+id/dt_avatar"
                card_view:layout_constraintTop_toTopOf="@+id/dt_avatar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>


